<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>
  <description>Pub sub declaration</description>
  <maintainer email="arsh402@gmail.com">arshad</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>cpp_custinterface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>